kubernetes/cks/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default

spec:
  podSelector: {} # target all pods
  policyTypes:
    - Ingress
    - Egress
